Add rule for joda-time usage (#10)
* Add rule for joda-time usage

* Update dependency lock

* Update libraries to use java 8

---------

Co-authored-by: Emily Yuan <eyuan@netflix.com>