@@ -7,6 +7,7 @@ import com.tngtech.archunit.lang.syntax.ArchRuleDefinition;
 import static com.tngtech.archunit.core.domain.JavaClass.Predicates.resideInAPackage;
 import static com.tngtech.archunit.core.domain.JavaClass.Predicates.resideOutsideOfPackage;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class JUnit4Rule implements ArchRulesService {
@@ -23,6 +24,6 @@ public class JUnit4Rule implements ArchRulesService {
 
     @Override
     public Map<String, ArchRule> getRules() {
-        return Map.of("junit4Rule", junit4Rule);
+        return Collections.singletonMap("junit4Rule", junit4Rule);
     }
 }
